style: fix section z-index

--- a/website/assets/sass/components/_section.scss
+++ b/website/assets/sass/components/_section.scss
@@ -5,7 +5,6 @@ section {
   justify-content: center;
   margin-top: -1px;
   padding: $s-section-v-padding 0 calc(#{$s-section-v-padding} + 2rem);
-  z-index: -1;
   will-change: color;
   transition: color .2s linear;
 
